<resources>
    <string name="app_name">Glitch Cam Video Editor</string>
    <string name="app_name_super">MeiCam(Super)</string>
    <string name="app_name_ms">MeiCamArScene</string>
    <string name="privacy_statement">Agreement and policy</string>
    <string name="statement_content">Please carefully read and fully understand the terms and conditions of service agreement and privacy policy. Meitu only provides video editing and shooting services, and will not collect your personal information. You can read the \"Service Agreement\" and \"Privacy Policy\" for details. If you agree, please click agree to accept our service.</string>
    <string name="service_agreement">Service Agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="not_used">Not used</string>
    <string name="agree">Agree</string>
    <string name="ssl_error_prompt">The SSL certificate failed, whether to continue to visit?</string>
    <string name="douYinEffects">DouVideo</string>
    <string name="particleEffects">Particle</string>
    <string name="captureScene">VirtualKeyer</string>
    <string name="picInPic">PIP</string>
    <string name="flipSubtitles">FlipCaption</string>
    <string name="musicLyrics">MusicLyrics</string>
    <string name="pushMirrorFilm">SuperZoom</string>
    <string name="boomRang">Boomerang</string>
    <string name="makingCover">MakeCover</string>
    <string name="photosAlbum">PhotoAlbum</string>
    <string name="flashEffect">FlashEffect</string>
    <string name="mimo">Mimo</string>
    <string name="theme_shoot">ThemeShoot</string>
    <string name="initArsence">Arscene module is initializing, please later</string>
    <string name="no_back_activity_cancel">Cancel</string>
    <string name="no_back_activity_setting">Setting</string>
    <string name="transition_time">Transition time 0.3s</string>
    <string name="no_back_activity_message">\"Don\'t keep activities\" option has open which cause the normal function can\'t use. Please click on the \"SETTING\",and shut down \"Don\'t keep activities\" in the \"developer options\".</string>
    <string name="versionNumber">V %1$s</string>
    <string name="videoCapture">Video Shoot</string>
    <string name="videoEditName">Video Edit</string>
    <string name="setting">Setting</string>
    <string name="captureSetting">Capture Setting</string>
    <string name="captureResolution">Resolution</string>
    <string name="int1080">1080</string>
    <string name="int720">720</string>
    <string name="int540">540</string>
    <string name="outputSetting">Output Setting</string>
    <string name="outputResolution">Resolution</string>
    <string name="k4k">4K</string>
    <string name="bitrate">Bitrate</string>
    <string name="mbps">Mbps</string>
    <string name="disable_hardware_encoder">Hardware Encoder</string>
    <string name="others">Others</string>
    <string name="background_blur_fill">Background Blur</string>
    <string name="input_error">Data error，input again</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_hint_text">Please enter</string>
    <string name="feedback_hint_number">Keeping the contact can solve problems better~</string>
    <string name="feedback_tip1">Content cannot be empty</string>
    <string name="feedback_tip2">Contact information cannot be empty</string>
    <string name="feedback_tip3">Submit Successfully</string>
    <string name="feedback_tip4">Submit failed</string>
    <string name="feedbackContent">Details</string>
    <string name="zero_over_oneThousand">0/1000</string>
    <string name="contactWay">Contact Information</string>
    <string name="submitFeedback">Submit</string>
    <string name="businessCooperation">Business \nTel:010-82851890 \nMail:meishe_sdk@cdv.com</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="zoom">Zoom</string>
    <string name="switch_camera">Flip</string>
    <string name="picture_zoom">Zoom</string>
    <string name="exposure_compensation">Exposure</string>
    <string name="exposure">Exposure</string>
    <string name="sharpen_open">Open Sharpness</string>
    <string name="sharpen_close">Close Sharpness</string>
    <string name="default_beauty_close">Close Beauty filter</string>
    <string name="default_beauty_open">Open Beauty filter</string>
    <string name="beauty_close">Close</string>
    <string name="beauty_open">Open</string>
    <string name="beauty_shape_close">Close</string>
    <string name="beauty_shape_open">Open</string>
    <string name="beauty">Beauty</string>
    <string name="skin_beauty">Skin</string>
    <string name="facetype">Facetype</string>
    <string name="makeup">Makeup</string>
    <string name="strength">Strength</string>
    <string name="whitening">White</string>
    <string name="ruddy">Rosy</string>
    <string name="zeroZZZ">00:00</string>
    <string name="more">More</string>
    <string name="cartoon_filter">Cartoon Filter</string>
    <string name="whitening_A">White A</string>
    <string name="whitening_B">White B</string>
    <string name="whiteningA">· White A</string>
    <string name="whiteningB">· White B</string>
    <string name="beauty_whitening_mode">whitening mode</string>
    <string name="beauty_a">A</string>
    <string name="beauty_b">B</string>
    <string name="cheek_thinning">Face</string>
    <string name="eye_enlarging">Eyes</string>
    <string name="intensity_forehead">Forhead</string>
    <string name="intensity_chin">Chin</string>
    <string name="intensity_nose">Nose</string>
    <string name="intensity_mouth">Mouth</string>
    <string name="face_small">FacLen</string>
    <string name="face_thin">FacWid</string>
    <string name="nose_long">LonNor</string>
    <string name="eye_corner">EyeCor</string>
    <string name="mouse_corner">MouCor</string>
    <string name="beauty_facetype_first">Type1</string>
    <string name="beauty_facetype_second">Type2</string>
    <string name="makeup_null">none</string>
    <string name="makeup_exist_main_menu_1">晒伤妆</string>
    <string name="makeup_exist_main_menu_2">烟熏妆</string>
    <string name="makeup_exist_main_menu_3">古风妆</string>
    <string name="makeup_custom_main_menu_libstick">口红</string>
    <string name="makeup_custom_main_menu_eyebrow">眉毛</string>
    <string name="makeup_custom_main_menu_eye_shadow">眼影</string>
    <string name="makeup_custom_main_menu_eyelash">睫毛</string>
    <string name="makeup_custom_main_menu_blush">腮红</string>
    <string name="makeup_custom_main_menu_shadow">阴影</string>
    <string name="makeup_custom_sub_menu_libstick_1">雾面哑光</string>
    <string name="makeup_custom_sub_menu_libstick_2">水彩纯釉</string>
    <string name="makeup_custom_sub_menu_libstick_3">质感缎面</string>
    <string name="makeup_custom_sub_menu_eyebrow_1">一字眉</string>
    <string name="makeup_custom_sub_menu_eyebrow_2">欧美眉</string>
    <string name="makeup_custom_sub_menu_eyebrow_3">柳叶眉</string>
    <string name="makeup_custom_sub_menu_eye_shadow_1">日常</string>
    <string name="makeup_custom_sub_menu_eye_shadow_2">华丽</string>
    <string name="makeup_custom_sub_menu_eye_shadow_3">大烟熏</string>
    <string name="makeup_custom_sub_menu_eyelash_1">自然</string>
    <string name="makeup_custom_sub_menu_eyelash_2">浓密</string>
    <string name="makeup_custom_sub_menu_eyelash_3">芭比</string>
    <string name="makeup_custom_sub_menu_blush_1">办公室</string>
    <string name="makeup_custom_sub_menu_blush_2">约会</string>
    <string name="makeup_custom_sub_menu_blush_3">聚会</string>
    <string name="makeup_custom_sub_menu_shadow_1">深邃</string>
    <string name="makeup_custom_sub_menu_shadow_2">可爱</string>
    <string name="makeup_custom_sub_menu_shadow_3">饱满</string>
    <string name="selectMedia">Select Asset</string>
    <string name="setSelectMedia">%1$d Assets</string>
    <string name="select_two_video">Choose 2 materials to make</string>
    <string name="select_the_second_video">Select the 2nd material</string>
    <string name="prompt">Tips</string>
    <string name="startMaking">Next</string>
    <string name="checkAll">Select</string>
    <string name="cancelCheckAll">Deselect</string>
    <string name="date">Date</string>
    <string name="yearMonthDate">yyyy-MM-dd</string>
    <string name="today">Today</string>
    <string name="single_select_picture">Select Image</string>
    <string name="select_video">Select Video</string>
    <string name="select_assets">Select Assets</string>
    <string name="select_production_proportion">Choose making ratio</string>
    <string name="twentyOneTNine">21:9</string>
    <string name="nineTTwentyOne">9:21</string>
    <string name="sixteenTNine">16:9</string>
    <string name="eighteenTNine">18:9</string>
    <string name="nineTEighteen">9:18</string>
    <string name="nineTSixteen">9:16</string>
    <string name="fourTThree">4:3</string>
    <string name="threeTFour">3:4</string>
    <string name="oneTone">1:1</string>
    <string-array name="videoEdit">
        <item>@string/glitch</item>
        <item>@string/filter</item>
        <item>@string/caption</item>
        <item>@string/comcaption</item>
        <item>@string/animatedSticker</item>
        <item>@string/music</item>
        <item>@string/animation</item>
        <item>@string/transition</item>
        <item>@string/watermark</item>
    </string-array>
    <string name="compile">Compile</string>
    <string name="theme">Theme</string>
    <string name="edit">Edit</string>
    <string name="glitch">Glitch</string>
    <string name="filter">Filter</string>
    <string name="animatedSticker">Sticker</string>
    <string name="animation">Animation</string>
    <string name="caption">Caption</string>
    <string name="comcaption">Comcaption</string>
    <string name="background">BACKGROUND</string>
    <string name="watermark">Watermark</string>
    <string name="transition">Transition</string>
    <string name="music">Music</string>
    <string name="dub">Dub</string>
    <string name="stayTuned">Stay tuned!</string>
    <string name="contactBusiness">Move to the official website to contact business people</string>
    <string name="originalSound">Origin</string>
    <string name="int50">50</string>
    <string name="int0">0</string>
    <string name="traditional_caption">Traditional caption</string>
    <string name="pieced_together_caption">Pieced together caption</string>
    <string name="march_out_animation">March out animation</string>
    <string name="march_in_animation">March in animation</string>
    <string name="combination_animation">Combination animation</string>
    <string name="theme_tip">Pause and edit the title text</string>
    <string name="theme_title">Record a Good Life</string>
    <string name="trim">TRIM</string>
    <string name="split">SPLIT</string>
    <string name="correctionColor">BRIGHTNESS</string>
    <string name="adjust">RATIO</string>
    <string name="speed">SPEED</string>
    <string name="volume">VOLUME</string>
    <string name="copy">COPY</string>
    <string name="delete">DELETE</string>
    <string name="clip_add_key_frame_text">Add KeyFrame</string>
    <string name="intensity">Intensity</string>
    <string name="style">Style</string>
    <string name="cancel">Cancel</string>
    <string name="asset_loading">Loading…</string>
    <string name="asset_loadfailed">Failed to load!</string>
    <string name="retry">Retry</string>
    <string name="reset">Reset</string>
    <string name="theme_edit_tv_name">edit text</string>
    <string name="complete">complete</string>
    <string name="color_adjust_single_color">Single</string>
    <string name="color_adjust_multi_color">Multi</string>
    <string name="color_adjust_intensity">Intensity</string>
    <string name="color_adjust_density">Density</string>
    <string name="asset_more_filter_search">Search filter name or UUID</string>
    <string name="photo_duration">Photo Duration</string>
    <string name="dlg_ok">OK</string>
</resources>