<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.glitchcam.vepromei.download.AssetListFragment">
    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >
        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/dp36"
            android:layout_margin="@dimen/dp10"
            android:paddingLeft="14dp"
            android:drawableLeft="@mipmap/filter_search"
            android:drawablePadding="@dimen/dp10"
            android:hint="@string/asset_more_filter_search"
            android:textSize="11sp"
            android:background="@drawable/activity_asset_download_asset_search"
            android:maxLength="40"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:paddingRight="@dimen/dp10"
            />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="11dp"
            android:text="@string/cancel"
            android:textColor="#1f1f1f"
            android:textSize="13sp"
            android:visibility="gone"
            />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_search"
        android:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/asset_recyclerviewList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <LinearLayout

        android:id="@+id/preloadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:gravity="center"
        android:layout_below="@id/ll_search"
        android:orientation="vertical">
        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminateBehavior="repeat"
            android:indeterminateDrawable="@drawable/progress_eight_petal_xml" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/asset_loading"
            android:textColor="#4d4f51"
            android:textAlignment="center"
            android:textSize="19sp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/loadFailedLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_loadfailed"
            android:textColor="#ffd0021b"
            android:textSize="19sp"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:id="@+id/reloadAsset"
            android:layout_width="80dp"
            android:layout_height="27dp"
            android:layout_marginTop="44dp"
            android:background="#ff4a90e2"
            android:text="@string/retry"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"/>
    </LinearLayout>
</RelativeLayout>
