<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp30"
        >
        <TextView
            android:id="@+id/tv_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp10"
            android:textColor="@color/white"
            android:text="@string/color_adjust_single_color"
            android:padding="5dp"
            android:layout_marginRight="@dimen/dp64"
            android:drawableBottom="@mipmap/adjust_denoise_bottom_line"
            android:drawablePadding="5dp"
            />
        <TextView
            android:id="@+id/tv_multi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp10"
            android:textColor="@color/ccffffff"
            android:text="@string/color_adjust_multi_color"
            android:padding="5dp"
            android:drawablePadding="5dp"
            />
    </LinearLayout>
    <!--其他调节-->
    <LinearLayout
        android:id="@+id/ll_seek_intensity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp25"
        android:paddingRight="@dimen/dp40"
        android:layout_marginBottom="@dimen/dp20"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:gravity="center"
            android:visibility="invisible"
            />
        <SeekBar
            android:id="@+id/seek_intensity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:max="100"
            android:progressDrawable="@drawable/caption_size_seekbar"
            android:thumb="@drawable/custom_voice_seekbar_ball" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_adjust_intensity"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:gravity="center"
            />
    </LinearLayout>
    <!--其他调节-->
    <LinearLayout
        android:id="@+id/ll_seek_density"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp25"
        android:paddingRight="@dimen/dp40"
        >
        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:gravity="center"
            />
        <SeekBar
            android:id="@+id/seek_density"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:max="100"
            android:progressDrawable="@drawable/caption_size_seekbar"
            android:thumb="@drawable/custom_voice_seekbar_ball" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_adjust_density"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>