<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.glitchcam.vepromei.themeshoot.ThemeEditCaptionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/theme_capture_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_caption_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginBottom="11dp"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="#FF8B8B8B"
            android:textSize="@dimen/sp12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_caption_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:padding="5dp"
            android:text="@string/theme_edit_tv_name"
            android:textColor="#FF8B8B8B"
            android:textSize="@dimen/sp12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_caption_compile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginBottom="11dp"
            android:padding="5dp"
            android:text="@string/complete"
            android:textColor="#FF8B8B8B"
            android:textSize="@dimen/sp12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/et_caption"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1a1a1a"
        android:gravity="top|left"
        android:padding="@dimen/dp30"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_capture_top" />
</androidx.constraintlayout.widget.ConstraintLayout>